--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
         <link rel='stylesheet' href='style.css' />
     </head>
     <body>
-        <canvas width='300' height='600'></canvas>
-        <script src='js/tetris.js'></script>
-        <script src='js/controller.js'></script>
-        <script src='js/render.js'></script>
+        <img class="bg" id="end" src="" alt="" />
+        <div id="container">
+            <canvas width='300' height='600'></canvas>
+            <script src='js/tetris.js'></script>
+            <script src='js/controller.js'></script>
+            <script src='js/render.js'></script>
+        </div>
     </body>
 </html>
