--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <img class="bg" id="end" src="" alt="" />
         <div id="container">
-            <canvas width='300' height='600'></canvas>
+            <canvas id="tetris" width='300' height='600'></canvas>
             <script src='js/tetris.js'></script>
             <script src='js/controller.js'></script>
             <script src='js/render.js'></script>
